# llm

./: Cargo.toml  README.md
crates/llm/: Cargo.toml
crates/llm-app/: Cargo.toml
crates/llm-app/src/: auth_service.rs  builder.rs  context.rs  lib.rs  questionnaire_service.rs  registry.rs  session_service.rs  skill_service.rs  tool_service.rs
crates/llm-auth/: Cargo.toml
crates/llm-auth/src/: api_key.rs  discover.rs  lib.rs  provider.rs  token.rs
crates/llm-auth/src/oauth/: flow.rs  mod.rs  pkce.rs  primitives.rs
crates/llm-cli/: Cargo.toml
crates/llm-cli/src/: approval.rs  bootstrap.rs  lib.rs  main.rs
crates/llm-cli/src/commands/: auth.rs  debug.rs  mod.rs  questionnaire.rs  session.rs  tools.rs
crates/llm-cli/src/render/: mod.rs  questionnaire.rs  stream.rs
crates/llm-config/: Cargo.toml
crates/llm-config/src/: app.rs  lib.rs  loader.rs  provider.rs  session.rs  tool.rs
crates/llm-core/: Cargo.toml
crates/llm-core/src/: capabilities.rs  error.rs  ids.rs  lib.rs  limits.rs  message.rs  metadata.rs  policy.rs  provider.rs  session.rs
crates/llm-gui-api/: Cargo.toml
crates/llm-gui-api/src/: dto.rs  events.rs  facade.rs  lib.rs
crates/llm-mcp/: Cargo.toml
crates/llm-mcp/src/: lib.rs  transport.rs
crates/llm-provider-anthropic/: Cargo.toml
crates/llm-provider-anthropic/src/: auth.rs  client.rs  descriptor.rs  features.rs  lib.rs  tools.rs  transport.rs  wire.rs
crates/llm-provider-anthropic/tests/fixtures/: cliproxyapi_oauth_body.json  cliproxyapi_oauth_headers.json
crates/llm-provider-api/: Cargo.toml
crates/llm-provider-api/src/: adapter.rs  client.rs  event.rs  lib.rs  retry.rs
crates/llm-provider-google/: Cargo.toml
crates/llm-provider-google/src/: auth.rs  client.rs  descriptor.rs  lib.rs  tools.rs  wire.rs
crates/llm-provider-openai/: Cargo.toml
crates/llm-provider-openai/src/: auth.rs  client.rs  descriptor.rs  lib.rs  tools.rs  wire.rs
crates/llm-questionnaire/: Cargo.toml
crates/llm-questionnaire/src/: answer.rs  builder.rs  condition.rs  engine.rs  ids.rs  lib.rs  schema.rs  tool.rs  validate.rs
crates/llm-questionnaire/tests/: acceptance_sections.rs
crates/llm-session/: Cargo.toml
crates/llm-session/src/: approval.rs  builder.rs  config.rs  conversation.rs  event.rs  lib.rs  limits.rs  manager.rs  mediator.rs
crates/llm-skill/: Cargo.toml
crates/llm-skill/src/: lib.rs  loader.rs  registry.rs  validate.rs
crates/llm-store/: Cargo.toml
crates/llm-store/src/: account.rs  credential.rs  file.rs  lib.rs  memory.rs  session.rs
crates/llm-tools/: Cargo.toml
crates/llm-tools/src/: context.rs  fn_tool.rs  invocation.rs  lib.rs  policy.rs  registry.rs  tool.rs  validation.rs
crates/llm/src/: lib.rs
