[workspace]
    resolver = "2"
    members  = ["crates/*"]

[workspace.package]
    version      = "0.1.0"
    edition      = "2024"
    rust-version = "1.85"

[workspace.dependencies]
    llm-core               = { path = "crates/llm-core" }
    llm-auth               = { path = "crates/llm-auth" }
    llm-tools              = { path = "crates/llm-tools" }
    llm-questionnaire      = { path = "crates/llm-questionnaire" }
    llm-config             = { path = "crates/llm-config" }
    llm-store              = { path = "crates/llm-store" }
    llm-provider-api       = { path = "crates/llm-provider-api" }
    llm-session            = { path = "crates/llm-session" }
    llm-provider-openai    = { path = "crates/llm-provider-openai" }
    llm-provider-anthropic = { path = "crates/llm-provider-anthropic" }
    llm-provider-google    = { path = "crates/llm-provider-google" }
    llm-skill              = { path = "crates/llm-skill" }
    llm-app                = { path = "crates/llm-app" }
    llm-mcp                = { path = "crates/llm-mcp" }
    llm-cli                = { path = "crates/llm-cli" }
    llm-gui-api            = { path = "crates/llm-gui-api" }
    llm                    = { path = "crates/llm" }

    async-trait  = "0.1"
    base64       = "0.22"
    chrono       = { version = "0.4", features = ["serde"] }
    clap         = { version = "4", features = ["derive"] }
    fastrand     = "2"
    getrandom    = "0.4.2"
    reqwest      = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls", "charset", "http2", "macos-system-configuration"] }
    serde        = { version = "1", features = ["derive"] }
    serde_json   = "1"
    serde_yaml   = "0.9"
    sha2         = "0.11.0"
    thiserror    = "2"
    tokio        = { version = "1", features = ["full"] }
    tokio-stream = "0.1"
    kdl-config   = { git = "https://github.com/bryanmatteson/kdl-config.git", tag = "v0.1.5" }
    regex-lite   = "0.1"
    schemars     = "1"
    url          = "2"
