[package]
name = "llm-auth"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[dependencies]
llm-core = { workspace = true }
async-trait = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true }
getrandom = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
url = { workspace = true }
