[package]
name = "llm-cli"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[lib]
name = "llm_cli"
path = "src/lib.rs"

[[bin]]
name = "llmctl"
path = "src/main.rs"

[dependencies]
llm-core = { workspace = true }
llm-app = { workspace = true }
llm-auth = { workspace = true }
llm-provider-api = { workspace = true }
llm-provider-openai = { workspace = true }
llm-questionnaire = { workspace = true }
llm-session = { workspace = true }
llm-store = { workspace = true }
llm-tools = { workspace = true }
async-trait = { workspace = true }
clap = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
