[package]
name = "llm-gui-api"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[dependencies]
llm-core = { workspace = true }
llm-app = { workspace = true }
llm-auth = { workspace = true }
llm-session = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
