[package]
    name                   = "llm-mcp"
    version                = "0.1.0"
    edition.workspace      = true
    rust-version.workspace = true
    description            = "Generic MCP (Model Context Protocol) server skeleton for llm-based tools"

[features]
    default = []
    sse     = ["dep:bytes", "dep:http", "dep:http-body-util", "dep:hyper", "dep:hyper-util", "dep:tokio-stream"]

[dependencies]
    llm-core  = { workspace = true }
    llm-tools = { workspace = true }

    anyhow      = "1"
    async-trait = { workspace = true }
    serde       = { workspace = true }
    serde_json  = { workspace = true }
    tokio       = { workspace = true }
    tracing     = "0.1"

    # Optional SSE transport deps
    bytes          = { version = "1", optional = true }
    http           = { version = "1", optional = true }
    http-body-util = { version = "0.1", optional = true }
    hyper          = { version = "1", features = ["server", "http1"], optional = true }
    hyper-util     = { version = "0.1", features = ["tokio"], optional = true }
    tokio-stream   = { workspace = true, optional = true, features = ["sync"] }

[dev-dependencies]
    llm-tools = { workspace = true, features = ["test-utils"] }
