[package]
name = "llm-questionnaire"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
schemars = { workspace = true }
regex-lite = { workspace = true }
async-trait = { workspace = true }
llm-core = { path = "../llm-core" }
llm-tools = { path = "../llm-tools" }
