[package]
name = "llm-session"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[dependencies]
llm-core = { workspace = true }
llm-auth = { workspace = true }
llm-provider-api = { workspace = true }
llm-tools = { workspace = true }
llm-store = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
fastrand = { workspace = true }
tokio-stream = { workspace = true }
