[package]
name = "llm-store"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[dependencies]
llm-core = { workspace = true }
llm-auth = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
tempfile = "3"
