[package]
name = "llm-tools"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[features]
default = []
test-utils = []

[dependencies]
llm-core = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
